# venus

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  STABILITY.md
.github/workflows/: release.yml  test.yml
crates/venus/: Cargo.toml  README.md
crates/venus-cli/: Cargo.toml  README.md
crates/venus-cli/src/: build.rs  cargo_manager.rs  executor.rs  main.rs  run.rs  serve.rs  sync.rs  watch.rs
crates/venus-cli/src/export/: mod.rs
crates/venus-cli/src/output/: decoder.rs  mod.rs
crates/venus-cli/tests/: e2e.rs
crates/venus-core/: Cargo.toml  README.md
crates/venus-core/src/: error.rs  lib.rs  paths.rs  widgets.rs
crates/venus-core/src/compile/: cargo_generator.rs  cell.rs  definition_processor.rs  dependency_parser.rs  errors.rs  mod.rs  production.rs  source_processor.rs  toolchain.rs  types.rs  universe.rs
crates/venus-core/src/execute/: context.rs  executor.rs  ffi.rs  loaded_cell.rs  mod.rs  parallel.rs  process.rs  reload.rs  windows_dll.rs
crates/venus-core/src/graph/: mod.rs  parser.rs  source_editor.rs  types.rs
crates/venus-core/src/ipc/: mod.rs  protocol.rs  worker.rs
crates/venus-core/src/salsa_db/: cache.rs  conversions.rs  inputs.rs  mod.rs  queries.rs
crates/venus-core/src/state/: manager.rs  mod.rs  output.rs  schema.rs
crates/venus-core/tests/: cranelift_abi.rs  import_propagation.rs  markdown_extraction.rs  notebook_execution.rs  process_isolation.rs
crates/venus-macros/: Cargo.toml  README.md
crates/venus-macros/src/: lib.rs
crates/venus-server/: Cargo.toml  README.md
crates/venus-server/src/: embedded_frontend.rs  error.rs  lib.rs  lsp.rs  protocol.rs  routes.rs  rust_analyzer.rs  session.rs  undo.rs  watcher.rs
crates/venus-server/src/frontend/: app.js  graph.js  index.html  lsp-client.js  styles.css
crates/venus-server/tests/: protocol_messages.rs
crates/venus-sync/: Cargo.toml  README.md
crates/venus-sync/src/: error.rs  ipynb.rs  lib.rs  outputs.rs  parser.rs
crates/venus-sync/tests/: roundtrip.rs
crates/venus-worker/: Cargo.toml
crates/venus-worker/src/: main.rs
crates/venus/cli/: README.md
crates/venus/cli/src/: build.rs  cargo_manager.rs  colors.rs  executor.rs  main.rs  run.rs  watch.rs
crates/venus/cli/src/export/: html.rs  mod.rs
crates/venus/cli/src/output/: decoder.rs  formatter.rs
crates/venus/src/: lib.rs  render.rs
crates/venus/worker/: README.md
crates/venus/worker/src/: ffi.rs  main.rs
docs/: FAQ.md  api.md  cells.md  cli.md  deployment.md  getting-started.md  how-it-works.md  installation.md  render.md  troubleshooting.md  widgets.md
examples/: data-analysis.rs  hello.rs  infinite_loop.rs  simple.rs  simple_compute.rs  widgets.rs
tests/cranelift_validation/: cell.rs  run_test.sh  test_abi.rs  universe.rs
