[workspace]
resolver = "2"
members = [
    "crates/venus",
    "crates/venus-macros",
    "crates/venus-core",
    "crates/venus-sync",
    "crates/venus-server",
]
exclude = [".venus", "examples/.venus", "tests/.venus", "*/.venus"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/venus"

[workspace.dependencies]
# Internal crates
venus = { path = "crates/venus", version = "0.1.0" }
venus-macros = { path = "crates/venus-macros", version = "0.1.0" }
venus-core = { path = "crates/venus-core", version = "0.1.0" }
venus-sync = { path = "crates/venus-sync", version = "0.1.0" }
venus-server = { path = "crates/venus-server", version = "0.1.0" }

# Parsing and AST
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "visit",
    "extra-traits",
] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Graph
petgraph = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = "0.8"                                       # default features include bytecheck for validation

# Incremental computation
salsa = "0.25"

# Dynamic loading
libloading = "0.9"

# Async runtime
tokio = { version = "1.48", features = [
    "macros",          # #[tokio::main]
    "rt-multi-thread", # Multi-threaded runtime
    "sync",            # Mutex, RwLock, oneshot, mpsc, broadcast
    "net",             # TcpListener
    "time",            # sleep, timeout
    "fs",              # File operations
    "process",         # Command
    "io-util",         # AsyncWriteExt, AsyncReadExt, AsyncBufReadExt
    "signal",          # ctrl_c()
] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.19", features = ["v4"] }
rustc-hash = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
which = "8.0"
dirs = "6.0"

# Parallelism
rayon = "1.10"

# Encoding
base64 = "0.22"

# Web server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# File watching
notify = "8.0"
notify-debouncer-mini = "0.6"

# WebSocket
futures = "0.3"
