[package]
name = "venus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Venus reactive notebook environment"

[[bin]]
name = "venus"
path = "src/main.rs"

[dependencies]
venus.workspace = true
venus-core.workspace = true
venus-sync.workspace = true
venus-server.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
serde_json = "1.0"
