[package]
name = "venus-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync engine for Venus - converts .rs notebooks to .ipynb"

[dependencies]
venus-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3.20"
