[package]
name = "venus-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Worker process for Venus cell execution with process isolation"

[[bin]]
name = "venus-worker"
path = "src/main.rs"

[dependencies]
# Core dependencies
venus-core = { path = "../venus-core", version = "0.1.0-beta.3" }
venus = { path = "../venus", version = "0.1.0-beta.3" }

# Serialization for IPC
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true

# Dynamic loading
libloading.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
